--- a/client/index.html
+++ b/client/index.html
@@ -13,8 +13,8 @@
         <link rel="stylesheet" href="">
     </head>
     <body>
-       <h1>This is to test heroku deployment</h1>
-        
+       <h1>This is to test hErOkU dEpLoYmEnT</h1>
+        <img src="https://hips.hearstapps.com/hmg-prod.s3.amazonaws.com/images/mocking-spongebob-1556133078.jpg">
         <script src="" async defer></script>
     </body>
 </html>
