--- a/client/index.html
+++ b/client/index.html
@@ -14,7 +14,7 @@
     </head>
     <body>
        <h1>This is to test hErOkU dEpLoYmEnT</h1>
-        <img src="https://hips.hearstapps.com/hmg-prod.s3.amazonaws.com/images/mocking-spongebob-1556133078.jpg">
+        <img src="https://hips.hearstapps.com/hmg-prod.s3.amazonaws.com/images/mocking-spongebob-1556133078.jpg" width="500px" height="400px">
         <script src="" async defer></script>
     </body>
 </html>
