--- a/client/index.html
+++ b/client/index.html
@@ -10,7 +10,7 @@
         <title>Heroku Test</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="">
+        <link rel="stylesheet" href="/styles">
     </head>
     <body>
        <h1>This is to test hErOkU dEpLoYmEnT</h1>
